fixed mobile styling issues and responsiveness

--- a/index.html
+++ b/index.html
@@ -1,164 +1,200 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <title>Netherpurge</title>
-  <script src="assets/js/app.js" defer></script>
-</head>
-<body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.0.8/css/all.css"
+      integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <title>Netherpurge</title>
+    <script src="assets/js/app.js" defer></script>
+  </head>
+  <body>
+    <header class="nav-header">
+      <nav class="nav-container">
+        <img class="nav-logo" src="assets/img/logo.png" alt="logo" />
+        <h3 class="nav-brand">NetherPurge</h3>
+        <ul class="navbar">
+          <li class="nav-item"><a href="#">About</a></li>
+          <li class="nav-item"><a href="#">Team</a></li>
+          <li class="nav-item"><a href="#">Contact</a></li>
+        </ul>
+        <!-- navbar -->
+      </nav>
+      <!-- nav-container -->
+    </header>
+    <!-- nav-header -->
 
-  <header class="nav-header">
-    <nav class="nav-container">
-      <img class="nav-logo" src="assets/img/logo.png" alt="logo">
-      <h3 class="nav-brand">NetherPurge</h3>
-      <ul class="navbar">
-        <li class="nav-item"><a href="#">About</a></li>
-        <li class="nav-item"><a href="#">Team</a></li>
-        <li class="nav-item"><a href="#">Contact</a></li>
-      </ul> <!-- navbar -->
-    </nav> <!-- nav-container -->
-  </header> <!-- nav-header -->
+    <section class="hero">
+      <h1 class="main-title">Nether<span>P</span>urge</h1>
 
-  <section class="hero">
+      <article>
+        <h4>
+          Group of friends that have been gaming since Warcraft 3. Thanks to
+          Blizzard, we discovered DOTA through custom game lobbies and have been
+          hooked ever since.
+        </h4>
+        <ul>
+          <li>ID: 5271052</li>
+          <li>Rank: N/A</li>
+          <li>Country: Dominican Republic</li>
+          <li>Tag: NP</li>
+        </ul>
+      </article>
+    </section>
+    <!-- hero section -->
 
-    <h1 class="main-title">Nether<span>P</span>urge</h1>
+    <div class="team-container">
+      <section id="team" class="team">
+        <h2 class="section-title">Team</h2>
 
-    <article>
-
-      <h4>Group of friends that have been gaming since Warcraft 3. Thanks to Blizzard, we discovered DOTA through custom game lobbies and have been hooked ever since.</h4>
-      <ul>
-        <li>ID: 5271052</li>
-        <li>Rank: N/A</li>
-        <li>Country: Dominican Republic</li>
-        <li>Tag: NP</li>
-      </ul>
-
-    </article>
-
-  </section> <!-- hero section -->
-  <div class="team-container">
-
-    <section id ="team" class="team">
-
-      <h2 class="section-title">Team</h2>
-      <div class="card-container-left">
         <div class="card">
           <div class="card-img-container">
             <div class="card-img-1"></div>
-          </div> <!-- card-img-container -->
+          </div>
+          <!-- card-img-container -->
           <div class="card-content">
             <h2 class="card-title">Syl</h2>
             <p class="card-subtitle">Pos. 1, 3, 4</p>
             <ul class="card-description">
               <li class="card-item">YoB: 1992</li>
-              <li class="card-item">Heroes: Lifestealer, Mirana, Warlock, Elder Titan</li>
-            </ul> <!-- card-description -->
-          </div> <!-- card-content -->
-        </div> <!-- card -->
-      </div><!-- card-container-left -->
+              <li class="card-item">
+                Heroes: Lifestealer, Mirana, Warlock, Elder Titan
+              </li>
+            </ul>
+            <!-- card-description -->
+          </div>
+          <!-- card-content -->
+        </div>
+        <!-- card -->
 
-      <div class="card-container-right">
         <div class="card">
           <div class="card-content">
             <h2 class="card-title">Noxx</h2>
             <p class="card-subtitle">Pos. 2, 3, 5</p>
             <ul class="card-description">
               <li class="card-item">YoB: 1991</li>
-              <li class="card-item">Heroes: Clinkz, Viper, Sniper, Storm Spirit</li>
-            </ul> <!-- card-description -->
-          </div> <!-- card-content -->
+              <li class="card-item">
+                Heroes: Clinkz, Viper, Sniper, Storm Spirit
+              </li>
+            </ul>
+            <!-- card-description -->
+          </div>
+          <!-- card-content -->
           <div class="card-img-container">
             <div class="card-img-2"></div>
-          </div> <!-- card-img-container -->
-        </div> <!-- card -->
-      </div><!-- card-container-right -->
+          </div>
+          <!-- card-img-container -->
+        </div>
+        <!-- card -->
 
-      <div class="card-container-left">
         <div class="card">
           <div class="card-img-container">
             <div class="card-img-3"></div>
-          </div> <!-- card-img-container -->
+          </div>
+          <!-- card-img-container -->
           <div class="card-content">
             <h2 class="card-title">iDelirium</h2>
             <p class="card-subtitle">Pos. 1, 3, 4, 5</p>
             <ul class="card-description">
               <li class="card-item">YoB: 1991</li>
-              <li class="card-item">Heroes: Phantom Assassin, Pangolier, Pugna, Wraith King</li>
-            </ul> <!-- card-description -->
-          </div> <!-- card-content -->
-        </div> <!-- card -->
-      </div><!-- card-container-left -->
+              <li class="card-item">
+                Heroes: Phantom Assassin, Pangolier, Pugna, Wraith King
+              </li>
+            </ul>
+            <!-- card-description -->
+          </div>
+          <!-- card-content -->
+        </div>
+        <!-- card -->
 
-      <div class="card-container-right">
         <div class="card">
           <div class="card-content">
             <h2 class="card-title">SavvyWolf</h2>
             <p class="card-subtitle">Pos. 1, 2, 3, 4, 5</p>
             <ul class="card-description">
               <li class="card-item">YoB: 1993</li>
-              <li class="card-item">Heroes: Witch Doctor, Troll Warlord, Centaur Warrunner, Tusk</li>
-              </ul> <!-- card-description -->
-            </div> <!-- card-content -->
-            <div class="card-img-container">
-              <div class="card-img-4"></div>
-            </div> <!-- card-img-container -->
-          </div> <!-- card -->
-        </div><!-- card-container-right -->
+              <li class="card-item">
+                Heroes: Witch Doctor, Troll Warlord, Centaur Warrunner, Tusk
+              </li>
+            </ul>
+            <!-- card-description -->
+          </div>
+          <!-- card-content -->
+          <div class="card-img-container">
+            <div class="card-img-4"></div>
+          </div>
+          <!-- card-img-container -->
+        </div>
+        <!-- card -->
 
-        <div class="card-container-left">
-          <div class="card">
-            <div class="card-img-container">
-              <div class="card-img-5"></div>
-            </div> <!-- card-img-container -->
-            <div class="card-content">
-              <h2 class="card-title">Lord_Horokeu</h2>
-              <p class="card-subtitle">Pos. 1, 3, 5</p>
-              <ul class="card-description">
-                <li class="card-item">YoB: 1993</li>
-                <li class="card-item">Monkey King, Ogre Magi, Phantom Lancer, Earthshaker</li>
-              </ul> <!-- card-description -->
-            </div> <!-- card-content -->
-          </div> <!-- card -->
-        </div><!-- card-container-left -->
+        <div class="card">
+          <div class="card-img-container">
+            <div class="card-img-5"></div>
+          </div>
+          <!-- card-img-container -->
+          <div class="card-content">
+            <h2 class="card-title">Lord_Horokeu</h2>
+            <p class="card-subtitle">Pos. 1, 3, 5</p>
+            <ul class="card-description">
+              <li class="card-item">YoB: 1993</li>
+              <li class="card-item">
+                Monkey King, Ogre Magi, Phantom Lancer, Earthshaker
+              </li>
+            </ul>
+            <!-- card-description -->
+          </div>
+          <!-- card-content -->
+        </div>
+        <!-- card -->
 
-        <div class="card-container-right">
-          <div class="card">
-            <div class="card-content">
-              <h2 class="card-title">ShApE ShiFTeR</h2>
-              <p class="card-subtitle">Pos. 4, 5</p>
-              <ul class="card-description">
-                <li class="card-item">YoB: 1993</li>
-                <li class="card-item">Heroes: Shadow Shaman, Shadow Shaman, Shadow Shaman, Shadow Shaman</li>
-              </ul> <!-- card-description -->
-            </div> <!-- card-content -->
-            <div class="card-img-container">
-              <div class="card-img-6"></div>
-            </div> <!-- card-img-container -->
-          </div> <!-- card -->
-        </div><!-- card-container-right -->
-
-      </div>       <!-- team-container -->
-
-    </section> <!-- team section -->
-
-    <section class="social-media">
-      <h2 class="section-title">Social Media</h2>
-      <ul>
-        <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-      </ul>
-
-
-
-    </section>
+        <div class="card">
+          <div class="card-content">
+            <h2 class="card-title">ShApE ShiFTeR</h2>
+            <p class="card-subtitle">Pos. 4, 5</p>
+            <ul class="card-description">
+              <li class="card-item">YoB: 1993</li>
+              <li class="card-item">
+                Heroes: Shadow Shaman, Shadow Shaman, Shadow Shaman
+              </li>
+            </ul>
+            <!-- card-description -->
+          </div>
+          <!-- card-content -->
+          <div class="card-img-container">
+            <div class="card-img-6"></div>
+          </div>
+          <!-- card-img-container -->
+        </div>
+        <!-- card -->
+      </section>
+      <!-- team section -->
+    </div>
 
     <footer>
-      Coded by &copy; <a href="http://www.darwinpsmith.com" target="_blank">Darwin Smith</a> 2018
-    </footer>
+      <section class="social-media">
+        <ul>
+          <li>
+            <a href="#"><i class="fab fa-facebook"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+          </li>
+        </ul>
+      </section>
 
+      <p>
+        Coded by &copy;
+        <a href="http://www.darwinpsmith.com" target="_blank">Darwin Smith</a>
+        2018
+      </p>
+    </footer>
   </body>
-  </html>
+</html>
